# fchat3-log-lib

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  fchat_index.rs  fchat_message.rs  lib.rs  structs.rs
src/structs/: errors.rs
tests/: carlen white  carlen white.idx  intergration_tests.rs
