[package]
name = "fchat3-log-lib"
version = "0.1.0"
authors = ["Carlen White <whitersuburban@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
chrono = "0.4"

[dev-dependencies]
tempdir = "0.3"